# lipidraft-simulator

./: .gitignore  CMakeLists.txt  README.md  draw.py  run.c
include/lrextra/: lrextra.h
include/lrextra/lrextra/: generics.h  moremath.h  randextra.h
src/: lipidraft.h
